--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         // Creates a new entry at the bottom of the list
         function createEntry(prev, prevMathField) {
-            var s = '<span></span>' // HTML string
+            var s = '<span style=\'vertical-align: middle\'></span>' // HTML string
             var div = document.createElement('div')
             div.innerHTML = s
             var element = div.firstChild
