--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
-    <link rel="stylesheet" href="/mathquill/mathquill.css" />
+    <link rel="stylesheet" href="mathquill/mathquill.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="/mathquill/mathquill.js"></script>
+    <script src="mathquill/mathquill.js"></script>
 
     <style>
         div {
