Automatically focuses the first box

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
             return mathField
         }
 
-        // Craetes the first math input
-        createEntry()
+        // Creates the first math input
+        createEntry().focus()
 
     </script>
 </body>
